--- a/app-front/Dockerfile
+++ b/app-front/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /app
 
 # Copier package.json et installer les dépendances
 COPY package*.json ./
-RUN npm ci
+RUN npm install
 
 # Copier le code source et builder en mode production
 COPY . .
