--- a/app-back/pom.xml
+++ b/app-back/pom.xml
@@ -57,11 +57,11 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- H2 Database (pour tests) -->
+        <!-- H2 Database (pour dev/test) -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <scope>test</scope>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- Lombok pour réduire le boilerplate -->
