--- a/observability/loki/loki-config.yaml
+++ b/observability/loki/loki-config.yaml
@@ -1,5 +1,6 @@
 # =================================================================
 # Configuration Grafana Loki - Agrégation de logs
+# Configuration simplifiée pour développement local
 # =================================================================
 
 auth_enabled: false
@@ -17,12 +18,13 @@ common:
       rules_directory: /tmp/loki/rules
   replication_factor: 1
   ring:
+    instance_addr: 127.0.0.1
     kvstore:
       store: inmemory
 
 schema_config:
   configs:
-    - from: 2023-01-01
+    - from: 2020-10-24
       store: boltdb-shipper
       object_store: filesystem
       schema: v11
@@ -30,13 +32,12 @@ schema_config:
         prefix: index_
         period: 24h
 
-ruler:
-  alertmanager_url: http://localhost:9093
-
 analytics:
   reporting_enabled: false
 
 limits_config:
-  retention_period: 168h  # 7 jours
+  retention_period: 168h
   ingestion_rate_mb: 10
   ingestion_burst_size_mb: 20
+  reject_old_samples: true
+  reject_old_samples_max_age: 168h
