--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,15 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:h2:mem:testdb
       - SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.h2.Driver
       - SPRING_JPA_HIBERNATE_DDL_AUTO=create-drop
-      # OpenTelemetry
+      # OpenTelemetry Java Agent - Auto-instrumentation
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
+      - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
       - OTEL_SERVICE_NAME=vitrine-backend
-      - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=dev
+      - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=dev,service.version=1.0.0
+      - OTEL_LOGS_EXPORTER=otlp
+      - OTEL_METRICS_EXPORTER=otlp
+      - OTEL_TRACES_EXPORTER=otlp
+      - OTEL_INSTRUMENTATION_LOGBACK_APPENDER_ENABLED=true
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
       interval: 30s
